Corrected misnamed result class.

--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -133,7 +133,7 @@
         margin-bottom: 0.5rem;
         width: 100%;
 
-        &-result {
+        &--result {
             display: flex;
             justify-content: center;
             font-family: typography.$font-decorative;
