--- a/templates/chat/roll-message.hbs
+++ b/templates/chat/roll-message.hbs
@@ -14,7 +14,7 @@
   {{#if savedMiss}}
     <div class="chat-card__header chat-card__header--saved-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SavedMiss"}}</div>
   {{/if}}
-  <div class="chat-card__initiative">
+  <div class="chat-card__combat-roll">
     <div class="chat-card__formula-toggle formula-toggle">
       <span class="chat-card__formula">{{roll.formula}}</span>
       <i class="fas fa-chevron-down formula-toggle-icon"></i>
@@ -33,7 +33,7 @@
         {{/if}}
       {{/each}}
     </div>
-    <div class="chat-card__initiative-result">
+    <div class="chat-card__combat-roll--result">
       <span class="chat-card__value chat-card__value--{{pickedType}}">{{roll.total}}</span>
     </div>
   </div>
