--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -1,77 +1,78 @@
 {{!-- Header always shows with item styling --}}
-<div class="chat-card chat-card__header"style="{{style}}">
-  <div class="chat-card__header--status">
-  <img src="{{img}}" class="chat-card__image--primary" /> 
-  <div>{{name}}</div>
+<div class="chat-card">
+  <div class="chat-card__header" style="{{style}}">
+    <div class="chat-card__header--status">
+      <img src="{{img}}" class="chat-card__image--primary" /> 
+      <div>{{name}}</div>
+    </div>
+    <div class="chat-card__header--subheader">({{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Cost"}}: {{system.cost}})</div>
   </div>
-  <div class="chat-card__header--subheader">({{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Cost"}}: {{system.cost}})</div>
-</div>
-</div>
 
-{{#if hasRoll}}
-  {{#if critHit}}
-    <div class="chat-card__header chat-card__header--critical-hit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticalHit"}}</div>
-  {{/if}}
-  {{#if critMiss}}
-    <div class="chat-card__header chat-card__header--critical-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticaMiss"}}</div>
-  {{/if}}
-  {{#if stolenCrit}}
-    <div class="chat-card__header chat-card__header--stolen-crit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.StolenCrit"}}</div>
-  {{/if}}
-  {{#if savedMiss}}
-    <div class="chat-card__header chat-card__header--saved-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SavedMiss"}}</div>
-  {{/if}}
-  <div class="chat-card__combat-roll">
-    <div class="chat-card__formula-toggle formula-toggle">
-      <span class="chat-card__formula">{{roll.formula}}</span>
-      <i class="fas fa-chevron-down formula-toggle-icon"></i>
-    </div>
-    <div class="chat-card__roll-details" style="display: none;">
-      {{#each roll.terms as |term|}}
-        {{#if term.results}}
-          <div class="chat-card__roll-term">
-            <span class="chat-card__roll-term-formula">{{term.formula}}</span>
-            <div class="chat-card__roll-term-results">
-              {{#each term.results as |result|}}
-                <span class="chat-card__die-result {{#if result.discarded}}chat-card__die-result--discarded{{/if}}">{{result.result}}</span>
-              {{/each}}
-            </div>
-          </div>
-        {{/if}}
-      {{/each}}
-    </div>
-    <div class="chat-card__combat-roll-result">
-      <span class="chat-card__value chat-card__value--power">{{roll.total}}</span>
-    </div>
-  </div>
-  {{#if acCheck}}
-    <div class="chat-card__effects chat-card__effects--ac-check">
-      <div class="chat-card__effects--title">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.ACCheck"}}</div>
-      {{#each targetRollData as |target|}}
-        <div class="chat-card__effects--name flexrow"> {{this.name}}:
-          {{#each this.abilities as |ability key|}}
-            {{#ifCond target.compare ">=" ability.ac}}
-              <div class="chat-card__effects--hit flex-group-center">
-            {{/ifCond}}
-            {{#ifCond target.compare "<" ability.ac}}
-              <div class="chat-card__effects--miss flex-group-center">
-            {{/ifCond}}
-            {{ability.abbr}}
-             </div>
-          {{/each}}
-        </div>
-      {{/each}}
-    </div>
-  {{/if}}
-{{/if}}
-
-{{#if system.description}}
-  <div class="chat-card__description">
-    {{#if system.rollActorName}}
-      <div class="chat-card__description--header">{{actor.name}}. . . </div> 
+  {{#if hasRoll}}
+    {{#if critHit}}
+      <div class="chat-card__header chat-card__header--critical-hit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticalHit"}}</div>
     {{/if}}
-    {{{system.description}}}
-  </div>
-{{/if}}
+    {{#if critMiss}}
+      <div class="chat-card__header chat-card__header--critical-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.CriticaMiss"}}</div>
+    {{/if}}
+    {{#if stolenCrit}}
+      <div class="chat-card__header chat-card__header--stolen-crit">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.StolenCrit"}}</div>
+    {{/if}}
+    {{#if savedMiss}}
+      <div class="chat-card__header chat-card__header--saved-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SavedMiss"}}</div>
+    {{/if}}
+    <div class="chat-card__combat-roll">
+      <div class="chat-card__formula-toggle formula-toggle">
+        <span class="chat-card__formula">{{roll.formula}}</span>
+        <i class="fas fa-chevron-down formula-toggle-icon"></i>
+      </div>
+      <div class="chat-card__roll-details" style="display: none;">
+        {{#each roll.terms as |term|}}
+          {{#if term.results}}
+            <div class="chat-card__roll-term">
+              <span class="chat-card__roll-term-formula">{{term.formula}}</span>
+              <div class="chat-card__roll-term-results">
+                {{#each term.results as |result|}}
+                  <span class="chat-card__die-result {{#if result.discarded}}chat-card__die-result--discarded{{/if}}">{{result.result}}</span>
+                {{/each}}
+              </div>
+            </div>
+          {{/if}}
+        {{/each}}
+      </div>
+      <div class="chat-card__combat-roll-result">
+        <span class="chat-card__value chat-card__value--power">{{roll.total}}</span>
+      </div>
+    </div>
+    {{#if acCheck}}
+      <div class="chat-card__effects chat-card__effects--ac-check">
+        <div class="chat-card__effects--title">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.ACCheck"}}</div>
+        {{#each targetRollData as |target|}}
+          <div class="chat-card__effects--name flexrow"> {{this.name}}:
+            {{#each this.abilities as |ability key|}}
+              {{#ifCond target.compare ">=" ability.ac}}
+                <div class="chat-card__effects--hit flex-group-center">
+              {{/ifCond}}
+              {{#ifCond target.compare "<" ability.ac}}
+                <div class="chat-card__effects--miss flex-group-center">
+              {{/ifCond}}
+              {{ability.abbr}}
+               </div>
+            {{/each}}
+          </div>
+        {{/each}}
+      </div>
+    {{/if}}
+  {{/if}}
 
-<hr class="chat-card__hr" />
+  {{#if system.description}}
+    <div class="chat-card__description">
+      {{#if system.rollActorName}}
+        <div class="chat-card__description--header">{{actor.name}}. . . </div> 
+      {{/if}}
+      {{{system.description}}}
+    </div>
+  {{/if}}
+
+  <hr class="chat-card__hr" />
+</div>
