Made more consistent use of seperate chat-card div for chat cards

--- a/templates/chat/feature-message.hbs
+++ b/templates/chat/feature-message.hbs
@@ -1,4 +1,5 @@
-<div class="chat-card chat-card__header chat-card__header--status" style="{{style}}">
+<div class="chat-card">
+<div class="chat-card__header chat-card__header--status" style="{{style}}">
   <img src="{{item.img}}" class="chat-card__image--primary" /> 
   <div>{{item.name}}</div>
 </div>
@@ -42,3 +43,4 @@
   {{/each}}
   </div>
 {{/ifCond}}
+</div>
