--- a/templates/chat/restore-message.hbs
+++ b/templates/chat/restore-message.hbs
@@ -1,5 +1,5 @@
 <div class="chat-card">
-  <div class="chat-card chat-card__header chat-card__header--restore">
+  <div class="chat-card__header chat-card__header--restore">
     <i class="fa-solid fa-notes-medical"></i> {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Restoration"}}
   </div>
   <div class="chat-card__description">
