--- a/templates/macros/popups/status-popup.hbs
+++ b/templates/macros/popups/status-popup.hbs
@@ -1,6 +1,6 @@
 <div class="{{cssClass}} popup-form" autocomplete="off">
-    <div class="base-form__main">
-        <div class="chat-card chat-card__header chat-card__header--status" style="{{style}}">
+    <div class="base-form__main chat-card">
+        <div class="chat-card__header chat-card__header--status" style="{{style}}">
             <img src="{{item.img}}" class="chat-card__image--primary" /> 
             <div>{{item.name}}</div>
         </div>
