--- a/src/scss/components/_popup-forms.scss
+++ b/src/scss/components/_popup-forms.scss
@@ -14,9 +14,9 @@
     background-color: rgba(0, 0, 0, 0.05);
 
     &--usage {
-      background-color: rgba(203, 142, 0, 0.2);
-      border: 1px solid rgba(203, 142, 0, 0.4);
-      box-shadow: 0 0 10px rgba(203, 142, 0, 0.2);
+      background-color: rgba(0, 105, 203, 0.2);
+      border: 1px solid rgba(0, 105, 203, 0.4);
+      box-shadow: 0 0 10px rgba(0, 105, 203, 0.2);
     }
   }
 
@@ -62,7 +62,7 @@
     @extend .base-form__header;
 
     &--usage {
-      color: #cb8e00;
+      color: #0069cb;
       font-size: 1.3rem;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     }
@@ -90,6 +90,8 @@
 
     &--data {
       background-color: colors.$form-content-bg;
+      padding-left: 1rem;
+      padding-right: 1rem;
     }
 
     &--usage {
@@ -99,7 +101,7 @@
       text-align: justify;
       background-color: rgba(16, 26, 41, 0.5);
       border-radius: 4px;
-      border-left: 3px solid #cb8e00;
+      border-left: 3px solid #0069cb;
       line-height: 1.4;
     }
 
@@ -112,17 +114,33 @@
       padding: 0.5rem;
       word-wrap: break-word;
     }
+
+    &--image {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 1rem;
+      background-color: rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      padding: 0.5rem;
+    }
+  }
+
+  &__image {
+    max-width: 100%;
+    max-height: 150px;
+    object-fit: contain;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
 
   &__effects {
     @extend .base-form__effects;
 
-
     &--title {
         @extend .base-form__effects--title;
         margin-bottom: 3px;
     }
-}
+  }
 
   &__group {
     @extend .base-form__group;
