--- a/templates/macros/popups/combat-power-popup.hbs
+++ b/templates/macros/popups/combat-power-popup.hbs
@@ -8,11 +8,15 @@
         {{/if}}
     </header>
     <div class="popup-form__main">
+        <div class="base-form__header popup-form__header">{{item.name}}</div>
+        <div class="popup-form__content popup-form__content--image">
+            <img src="{{item.img}}" class="popup-form__image" alt="{{item.name}}" />
+        </div>
         <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
         
         {{#if item.system.description}}
         <div class="popup-form__content popup-form__content--description">
-            <div class="base-form__header">{{item.actor.name}}</div> 
+            <div class="base-form__header popup-form__header">{{item.actor.name}}</div> 
             {{{item.system.description}}}
         </div>
         {{/if}}
@@ -56,7 +60,6 @@
 
         {{#if item.system.usageInfo}}
         <div class="popup-form__section popup-form__section--usage">
-            <div class="base-form__header popup-form__header--usage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.UsageInfo"}}</div>
             <div class="popup-form__content popup-form__content--usage">{{item.system.usageInfo}}</div>
         </div>
         {{/if}}
