--- a/templates/macros/popups/combat-power-popup.hbs
+++ b/templates/macros/popups/combat-power-popup.hbs
@@ -8,22 +8,22 @@
         {{/if}}
     </header>
     <div class="popup-form__main">
-        <div class="base-form__header popup-form__header">{{item.name}}</div>
+        <div class="popup-form__header">{{item.name}}</div>
         <div class="popup-form__content popup-form__content--image">
             <img src="{{item.img}}" class="popup-form__image" alt="{{item.name}}" />
         </div>
-        <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
+        <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
         
         {{#if item.system.description}}
         <div class="popup-form__content popup-form__content--description">
-            <div class="base-form__header popup-form__header">{{item.actor.name}}</div> 
+            <div class="popup-form__subheader">{{item.actor.name}}</div> 
             {{{item.system.description}}}
         </div>
         {{/if}}
 
         {{#if item.system.roll}}
         <div class="popup-form__section">
-            <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
+            <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
             <div class="popup-form__group">
                 <div class="popup-form__row">
                     <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</div>
@@ -53,7 +53,7 @@
 
         {{#if item.system.prerequisites}}
         <div class="popup-form__section">
-            <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Prerequisites"}}</div>
+            <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Prerequisites"}}</div>
             <div class="popup-form__content popup-form__content--data">{{item.system.prerequisites}}</div>
         </div>
         {{/if}}
