updated header to a fixed height to ensure it no longer clips off.

--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -1977,6 +1977,7 @@
 .eventide-rp-system .sheet-header {
   flex: 0 auto;
   overflow: hidden;
+  height: 8rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
