--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -131,6 +131,7 @@
 .sheet-header {
   flex: 0 auto;
   overflow: hidden;
+  height: 8rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
