--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -131,12 +131,18 @@
 .sheet-header {
   flex: 0 auto;
   overflow: hidden;
-  height: 8rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-bottom: 10px;
+  width: 100%;
+  padding-top: 8px;
+  padding-right: 8px;
+
+  &--actor {
+    height: 8rem;
+  }
 
   .profile-img {
     flex: 0 0 100px;
