--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -1,5 +1,5 @@
 {{! Sheet Header }}
-<header class='sheet-header'>
+<header class='sheet-header sheet-header--actor'>
   <img
     class='profile-img'
     src='{{actor.img}}'
