--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -6,6 +6,7 @@
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'>{{localize 'Name'}}</div>
+      <div class="item-cost item-prop">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
       <div class='item-quantity'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
       <div class='item-controls'>
         {{#if @root.editable}}
@@ -42,6 +43,7 @@
           </div>
           <div>{{item.name}}</div>
         </div>
+        <div class="item-cost item-prop">{{item.system.cost}}</div>
         <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
         <div class='item-controls'>
           <a
@@ -78,6 +80,7 @@
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'>{{localize 'Name'}}</div>
+      <div class="item-cost item-prop">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
       <div class='item-quantity'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
       <div class='item-controls'>
       </div>
@@ -102,6 +105,7 @@
           </div>
           <div>{{item.name}}</div>
         </div>
+        <div class="item-cost item-prop">{{item.system.cost}}</div>
         <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
         <div class='item-controls'>
           <a
