--- a/templates/macros/popups/gear-popup.hbs
+++ b/templates/macros/popups/gear-popup.hbs
@@ -63,9 +63,46 @@
                     <div class="popup-form__content popup-form__content--data">{{item.system.quantity}}</div>
                     <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cost"}}</div>
                     <div class="popup-form__content popup-form__content--data">{{item.system.cost}}</div>
+                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName"}}</div>
+                    <div class="popup-form__content popup-form__content--data">{{item.system.className}}</div>
+                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Weight"}}</div>
+                    <div class="popup-form__content popup-form__content--data">{{item.system.weight}}</div>
                 </div>
             </div>
         </div>
+
+        {{#ifCond effects.length ">" 0}}
+        <div class="popup-form__effects">
+            <div class='popup-form__effects--title'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
+            {{#each effects}}
+                <div class="base-form__effects--name">
+                    <img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}
+                </div>
+                {{#ifCond this.changes.length ">" 0 }}
+                {{#each this.changes}}
+                    <div class="base-form__effects--row">
+                        <div class="base-form__effects--row--cell base-form__effects--row--cell--first">{{keySplit this.key 2}}</div> 
+                        <div class="base-form__effects--row--cell base-form__effects--row--cell--middle">
+                            {{#ifCond this.mode "===" 5}}{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}{{/ifCond}}
+                            {{#ifCond this.mode "!==" 5}}
+                            {{#ifCond (keySplit this.key 4) "===" "advantage"}}
+                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
+                            {{/ifCond}}
+                            {{#ifCond (keySplit this.key 4) "===" "disadvantage"}}
+                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
+                            {{/ifCond}}
+                            {{#ifCond (keySplit this.key 3) "===" "change"}}
+                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
+                            {{/ifCond}}
+                            {{/ifCond}}
+                        </div>
+                        <div class="base-form__effects--row--cell base-form__effects--row--cell--last">{{this.value}}</div>
+                    </div>
+                {{/each}}
+                {{/ifCond}}
+            {{/each}}
+        </div>
+        {{/ifCond}}
     </div>
 
     <footer class="base-form__footer">
