--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -46,29 +46,31 @@
         <div class="item-cost item-prop">{{item.system.cost}}</div>
         <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
         <div class='item-controls'>
-          <a
-            class="item-control item-equip"
-            title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Unequip.label"}}'
-            data-action='toggleGear'
-          >
-            <i class='fa-solid fa-helmet-battle'></i>
-          </a>
-          <a
-            class='item-control item-edit'
-            title='{{localize "DOCUMENT.Update" type='Gear'}}'
-            data-action='viewDoc'
-          >
-            <i class='fas fa-edit'></i>
-          </a>
-          {{#if @root.editable}}
+        {{#if (or @root.isGM (not item.system.cursed))}}
             <a
-              class='item-control item-delete'
-              title='{{localize "DOCUMENT.Delete" type='Gear'}}'
-              data-action='deleteDoc'
+              class="item-control item-equip"
+              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Unequip.label"}}'
+              data-action='toggleGear'
             >
-              <i class='fas fa-trash'></i>
+              <i class='fa-solid fa-helmet-battle'></i>
             </a>
-          {{/if}}
+            <a
+              class='item-control item-edit'
+              title='{{localize "DOCUMENT.Update" type='Gear'}}'
+              data-action='viewDoc'
+            >
+              <i class='fas fa-edit'></i>
+            </a>
+            {{#if @root.editable}}
+              <a
+                class='item-control item-delete'
+                title='{{localize "DOCUMENT.Delete" type='Gear'}}'
+                data-action='deleteDoc'
+              >
+                <i class='fas fa-trash'></i>
+              </a>
+            {{/if}}
+        {{/if}}
         </div>
       </li>
     {{/each}}
