Removed ability to edit or view details of unequipped gear for players (so as not to spoil cursed items / unexamined items)

--- a/src/scss/components/_popup-forms.scss
+++ b/src/scss/components/_popup-forms.scss
@@ -57,6 +57,15 @@
     }
   }
 
+  &__callout {
+    @extend .base-form__callout;
+    margin-top: 0.5rem;
+  }
+
+  &__callout--warning {
+    @extend .base-form__callout--warning;
+  }
+
   // Elements
   &__header {
     @extend .protest-revolution-regular;
