--- a/templates/macros/popups/gear-popup.hbs
+++ b/templates/macros/popups/gear-popup.hbs
@@ -17,93 +17,99 @@
         </div>
         
         <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
-        
-        {{#if item.system.description}}
-        <div class="popup-form__content popup-form__content--description">
-            <div class="popup-form__subheader">{{item.actor.name}}</div> 
-            {{{item.system.description}}}
-        </div>
-        {{/if}}
-
-        {{#if item.system.roll}}
-        <div class="popup-form__section">
-            <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
-            <div class="popup-form__group">
-                <div class="popup-form__row">
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.roll.type}}</div>
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAbility"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.roll.ability}}</div>
-                </div>
+        {{#if (or isGM item.system.equipped)}}
+            {{#if item.system.description}}
+            <div class="popup-form__content popup-form__content--description">
+                <div class="popup-form__subheader">{{item.actor.name}}</div> 
+                {{{item.system.description}}}
             </div>
-            <div class="popup-form__group">
-                <div class="popup-form__row">
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Bonus"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{numberFormat item.system.roll.bonus decimals=0 sign=true}}</div>
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adjustments"}}</div>
-                    <div class="popup-form__content popup-form__content--data">
-                        {{#if (eq item.system.roll.diceAdjustments.total 0)}}
-                            <span class="popup-form__text--neutral">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Neutral"}}</span>
-                        {{else if (lt item.system.roll.diceAdjustments.total 0)}}
-                            <span class="popup-form__text--disadvantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Disadv"}} {{numberFormat (abs item.system.roll.diceAdjustments.total) decimals=0}}</span>
-                        {{else}}
-                            <span class="popup-form__text--advantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adv"}} {{numberFormat item.system.roll.diceAdjustments.total decimals=0}}</span>
-                        {{/if}}
+            {{/if}}
+
+            {{#if item.system.roll}}
+            <div class="popup-form__section">
+                <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
+                <div class="popup-form__group">
+                    <div class="popup-form__row">
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</div>
+                        <div class="popup-form__content popup-form__content--data">{{item.system.roll.type}}</div>
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAbility"}}</div>
+                        <div class="popup-form__content popup-form__content--data">{{item.system.roll.ability}}</div>
                     </div>
                 </div>
-            </div>
-        </div>
-        {{/if}}
-
-        <div class="popup-form__section">
-            <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ItemDetails"}}</div>
-            <div class="popup-form__group">
-                <div class="popup-form__row">
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Quantity"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.quantity}}</div>
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cost"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.cost}}</div>
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.className}}</div>
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Weight"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.weight}}</div>
-                </div>
-            </div>
-        </div>
-
-        {{#ifCond effects.length ">" 0}}
-        <div class="popup-form__effects">
-            <div class='popup-form__effects--title'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
-            {{#each effects}}
-                <div class="base-form__effects--name">
-                    <img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}
-                </div>
-                {{#ifCond this.changes.length ">" 0 }}
-                {{#each this.changes}}
-                    <div class="base-form__effects--row">
-                        <div class="base-form__effects--row--cell base-form__effects--row--cell--first">{{keySplit this.key 2}}</div> 
-                        <div class="base-form__effects--row--cell base-form__effects--row--cell--middle">
-                            {{#ifCond this.mode "===" 5}}{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}{{/ifCond}}
-                            {{#ifCond this.mode "!==" 5}}
-                            {{#ifCond (keySplit this.key 4) "===" "advantage"}}
-                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
-                            {{/ifCond}}
-                            {{#ifCond (keySplit this.key 4) "===" "disadvantage"}}
-                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
-                            {{/ifCond}}
-                            {{#ifCond (keySplit this.key 3) "===" "change"}}
-                                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
-                            {{/ifCond}}
-                            {{/ifCond}}
+                <div class="popup-form__group">
+                    <div class="popup-form__row">
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Bonus"}}</div>
+                        <div class="popup-form__content popup-form__content--data">{{numberFormat item.system.roll.bonus decimals=0 sign=true}}</div>
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adjustments"}}</div>
+                        <div class="popup-form__content popup-form__content--data">
+                            {{#if (eq item.system.roll.diceAdjustments.total 0)}}
+                                <span class="popup-form__text--neutral">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Neutral"}}</span>
+                            {{else if (lt item.system.roll.diceAdjustments.total 0)}}
+                                <span class="popup-form__text--disadvantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Disadv"}} {{numberFormat (abs item.system.roll.diceAdjustments.total) decimals=0}}</span>
+                            {{else}}
+                                <span class="popup-form__text--advantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adv"}} {{numberFormat item.system.roll.diceAdjustments.total decimals=0}}</span>
+                            {{/if}}
                         </div>
-                        <div class="base-form__effects--row--cell base-form__effects--row--cell--last">{{this.value}}</div>
                     </div>
+                </div>
+            </div>
+            {{/if}}
+
+            <div class="popup-form__section">
+                <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ItemDetails"}}</div>
+                <div class="popup-form__group">
+                    <div class="popup-form__row">
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Quantity"}}</div>
+                        <div class="popup-form__content popup-form__content--data">{{item.system.quantity}}</div>
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cost"}}</div>
+                        <div class="popup-form__content popup-form__content--data">{{item.system.cost}}</div>
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName"}}</div>
+                        <div class="popup-form__content popup-form__content--data">{{item.system.className}}</div>
+                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Weight"}}</div>
+                        <div class="popup-form__content popup-form__content--data">{{item.system.weight}}</div>
+                    </div>
+                </div>
+            </div>
+
+            {{#ifCond effects.length ">" 0}}
+            <div class="popup-form__effects">
+                <div class='popup-form__effects--title'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
+                {{#each effects}}
+                    <div class="base-form__effects--name">
+                        <img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}
+                    </div>
+                    {{#ifCond this.changes.length ">" 0 }}
+                    {{#each this.changes}}
+                        <div class="base-form__effects--row">
+                            <div class="base-form__effects--row--cell base-form__effects--row--cell--first">{{keySplit this.key 2}}</div> 
+                            <div class="base-form__effects--row--cell base-form__effects--row--cell--middle">
+                                {{#ifCond this.mode "===" 5}}{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}{{/ifCond}}
+                                {{#ifCond this.mode "!==" 5}}
+                                {{#ifCond (keySplit this.key 4) "===" "advantage"}}
+                                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
+                                {{/ifCond}}
+                                {{#ifCond (keySplit this.key 4) "===" "disadvantage"}}
+                                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
+                                {{/ifCond}}
+                                {{#ifCond (keySplit this.key 3) "===" "change"}}
+                                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
+                                {{/ifCond}}
+                                {{/ifCond}}
+                            </div>
+                            <div class="base-form__effects--row--cell base-form__effects--row--cell--last">{{this.value}}</div>
+                        </div>
+                    {{/each}}
+                    {{/ifCond}}
                 {{/each}}
-                {{/ifCond}}
-            {{/each}}
-        </div>
-        {{/ifCond}}
+            </div>
+            {{/ifCond}}
+        {{else}}
+            <div class="popup-form__callout popup-form__callout--warning">
+                <div><i class="fas fa-exclamation-triangle"></i>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.EquipFirst"}}</div>
+            </div>
+        {{/if}}
     </div>
+        
 
     <footer class="base-form__footer">
         {{#unless (or problems.targeting problems.quantity problems.equipped)}}
