--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -550,10 +550,11 @@
 .base-form__callout-box {
   font-family: "Underdog", serif;
   margin-bottom: 3px;
-  display: flex;
-  flex: 0 0 auto;
+  display: grid;
+  grid-auto-columns: auto;
+  grid-row-gap: 0.2rem;
 }
-.base-form__callout {
+.base-form__callout, .popup-form__callout {
   border-radius: 8px;
   padding: 0.5rem;
   font-weight: bold;
@@ -562,7 +563,7 @@
   font-size: 0.9rem;
   color: #ffffff;
 }
-.base-form__callout--warning {
+.base-form__callout--warning, .popup-form__callout--warning {
   background-color: #e6b800;
   border: 2px dashed #ff8c00;
 }
@@ -1314,6 +1315,9 @@
 .popup-form__text--neutral {
   color: #95a5a6;
   font-weight: bold;
+}
+.popup-form__callout {
+  margin-top: 0.5rem;
 }
 .popup-form__header {
   color: var(--eventide-rp-system-chat-card-white);
